--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -17,7 +17,7 @@
 
      
      
-     .kasa-footer-elements{
+     .kasa-footer_elements{
           
           img{
                position: absolute;
@@ -74,7 +74,7 @@
    
           background: #000000;
          
-         .kasa-footer-elements{
+         .kasa-footer_elements{
                
                img{
                     position: absolute;
