--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -1,6 +1,6 @@
 
 /**********Scss page apropos collapse*/
-.apropos-collapse {
+.kasa-apropos_collapse {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -237,14 +237,14 @@
   }
 }
 @media screen and (min-width: 1600px) and (max-width: 2000px) {
-  .apropos-collapse {
+  .kasa-apropos_collapse {
     left: 20%;
     
   }
   
 }
 @media screen and (min-width: 2001px) and (max-width: 2559px) {
-  .apropos-collapse {
+  .kasa-apropos_collapse {
     left: 23%;
     
   }
@@ -252,7 +252,7 @@
 }
 @media screen and  (min-width: 2560px) {
 
-  .apropos-collapse {
+  .kasa-apropos_collapse {
     left: 27%;
     
   }
@@ -301,11 +301,11 @@
 
         .collapse-icon {
           transition: transform 0.3s ease-in-out;
-          width: 90px;
+          width: 38px;
           height: 35px;
           color: #FFFFFF;
           position: absolute;
-          left: 89%;
+          left: 93%;
     
           &.open {
             transform: rotate(180deg);
