--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -91,8 +91,206 @@
   
     color:  #FF6060;
   }
-}  
+}
 
+@media screen and (min-width: 426px) and (max-width:768px){
+  .carousel-container {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    
+
+    mix-blend-mode: normal;
+    border-radius: 25px;
+    height: 255px;
+    //width: 335px;
+    width: 100%;
+    left: 0px;
+    top: 0px;
+    border-radius: 10px;
+    width: 100%;
+   
+    
+    
+  }
+
+  .carousel-arrow-container img {
+      width: 100%;
+      //max-width: 1240px;
+      //height: 415px;
+      height: 255px;
+      border-radius: 10px;
+      object-fit: cover;
+  }
+      
+  .carousel-arrow-container .MuiSvgIcon-root {
+      position: absolute;
+      cursor: pointer;
+      height: 30px;
+      width: 40px;
+      top: 49%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+      }
+      
+      .carousel-arrow-container .MuiSvgIcon-root:first-child {
+      left: 0;
+      margin-left: 15px;
+      
+      }
+      
+      .carousel-arrow-container .MuiSvgIcon-root:last-child {
+      right: 0;
+    
+  }
+
+  .Carousel-title-location{
+    width: 100%;
+    
+    h1{
+      position: absolute;
+      //left: 5.33%;
+      right: 5.33%;
+
+      bottom: 49.51%;
+      width:100%;
+      height: 73px;
+      
+      top:34%;
+
+      white-space: nowrap;
+      overflow: hidden;
+      //text-overflow: ellipsis;
+      
+        
+      @include  policeStyle1();
+      font-size: 18px;
+          
+      display: flex;
+      align-items: flex-end;
+          
+      color: #FF6060;
+          
+    }
+    p{
+      
+        position: absolute;
+        right: 8.53%;
+        top: 47%;
+        bottom: 51.18%;
+
+        @include  policeStyle1();
+        font-size: 16px;
+
+        display: flex;
+        align-items: flex-end;  
+        color:  #FF6060;
+      }
+  }  
+
+}
+
+@media screen and (min-width: 376px) and (max-width:425px){
+  .carousel-container {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    
+
+    mix-blend-mode: normal;
+    border-radius: 25px;
+    height: 255px;
+    //width: 335px;
+    width: 100%;
+    left: 0px;
+    top: 0px;
+    border-radius: 10px;
+    width: 100%;
+   
+    
+    
+  }
+
+  .carousel-arrow-container img {
+      width: 100%;
+      //max-width: 1240px;
+      //height: 415px;
+      height: 255px;
+      border-radius: 10px;
+      object-fit: cover;
+  }
+      
+  .carousel-arrow-container .MuiSvgIcon-root {
+      position: absolute;
+      cursor: pointer;
+      height: 30px;
+      width: 40px;
+      top: 49%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: white;
+      }
+      
+      .carousel-arrow-container .MuiSvgIcon-root:first-child {
+      left: 0;
+      margin-left: 15px;
+      
+      }
+      
+      .carousel-arrow-container .MuiSvgIcon-root:last-child {
+      right: 0;
+    
+  }
+
+  .Carousel-title-location{
+    
+    h1{
+      position: absolute;
+      //left: 5.33%;
+      right: 5.33%;
+
+      bottom: 49.51%;
+      width:100%;
+      height: 73px;
+      
+      top:42%;
+
+      white-space: nowrap;
+      overflow: hidden;
+      //text-overflow: ellipsis;
+      
+        
+      @include  policeStyle1();
+      font-size: 18px;
+          
+      display: flex;
+      align-items: flex-end;
+          
+      color: #FF6060;
+          
+    }
+    p{
+      
+        position: absolute;
+        right: 8.53%;
+        top: 60%;
+        bottom: 46.18%;
+
+        @include  policeStyle1();
+        font-size: 14px;
+
+        display: flex;
+        align-items: flex-end;  
+        color:  #FF6060;
+      }
+  }  
+
+}
 @media screen and (max-width: 375px){
   .carousel-container {
     position: absolute;
@@ -106,6 +304,7 @@
     border-radius: 25px;
     height: 255px;
     width: 335px;
+    width: 100%;
     left: 0px;
     top: 0px;
     border-radius: 10px;
