--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -116,8 +116,245 @@
     top: 454px;
   }
 
+  @media screen and (min-width: 426px) and (max-width:768px){
+    @include collapse-aproposM();
+    width: 75%;
+    left: 11%;
+    top: 340px;
+ 
+    .collapse-container {
+      margin-bottom: 20px;
+     
   
-
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+  
+    .collapse-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: #FF6060;
+      border-radius: 5px;
+      cursor: pointer;
+      Width:335px;
+      width: 100%;
+      Height:30px;
+  
+      h3 {
+        margin: 0;
+        @include  policeStyle1();
+        font-size: 13px;
+      
+    
+        display: flex;
+        align-items: center;
+        color: #FFFFFF; 
+      }
+  
+      & .collapse-icon {
+        display: inline-block;
+        position: absolute;         
+        left: 83.75%;
+        right: 18.63%;
+        width: 66px;
+        height: 30px;
+        color: #FFFFFF;
+        transition: transform 0.3s ease;
+        
+        &.open {
+          transform: rotate(180deg);
+        }
+      }
+    }
+  
+    .collapse-content-closed {
+      height: 0;
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+    }
+  
+    .collapse-content {
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+      padding: 20px;
+      Width:335px;
+      background: #F7F7F7;
+      border-radius: 5px;
+     //width: 71%;
+      p {
+        margin: 0;
+        @include  policeStyle1();
+        font-weight: 400;
+        font-size: 12px;
+      
+        //width: 71%;
+        color: #FF6060;
+      }
+      
+    }
+  
+    .collapse-0 {
+      display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    position: relative;
+    top:330px;
+    }
+  
+    .collapse-1 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:484px;
+      top: 335px;
+    }
+  
+    .collapse-2 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:699px;
+      top: 340px;display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:699px;
+      top: 340px;
+    }
+  
+    .collapse-3 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:776px;
+      //top: 348px;
+    }
+  }  
+  @media screen and (min-width: 376px) and (max-width:425px){
+    @include collapse-aproposM();
+    width: 88%;
+    top: 340px;
+ 
+    .collapse-container {
+      margin-bottom: 20px;
+     
+  
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+  
+    .collapse-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: #FF6060;
+      border-radius: 5px;
+      cursor: pointer;
+      Width:335px;
+      width: 100%;
+      Height:30px;
+  
+      h3 {
+        margin: 0;
+        @include  policeStyle1();
+        font-size: 13px;
+      
+    
+        display: flex;
+        align-items: center;
+        color: #FFFFFF; 
+      }
+  
+      & .collapse-icon {
+        display: inline-block;
+        position: absolute;         
+        left: 83.75%;
+        right: 18.63%;
+        width: 66px;
+        height: 30px;
+        color: #FFFFFF;
+        transition: transform 0.3s ease;
+        
+        &.open {
+          transform: rotate(180deg);
+        }
+      }
+    }
+  
+    .collapse-content-closed {
+      height: 0;
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+    }
+  
+    .collapse-content {
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+      padding: 20px;
+      Width:335px;
+      background: #F7F7F7;
+      border-radius: 5px;
+     //width: 71%;
+      p {
+        margin: 0;
+        @include  policeStyle1();
+        font-weight: 400;
+        font-size: 12px;
+      
+        //width: 71%;
+        color: #FF6060;
+      }
+      
+    }
+  
+    .collapse-0 {
+      display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    position: relative;
+    top:330px;
+    }
+  
+    .collapse-1 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:484px;
+      top: 335px;
+    }
+  
+    .collapse-2 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:699px;
+      top: 340px;display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:699px;
+      top: 340px;
+    }
+  
+    .collapse-3 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:776px;
+      //top: 348px;
+    }
+  }  
   @media screen and (max-width: 375px){
     @include collapse-aproposM();
     top: 340px;
@@ -366,25 +603,25 @@
   
     flex-direction: column;
     position: absolute;
-    width: 335px; 
+    width: 335px;
+    width: 100%; 
     top: -180px;
+    
    
     .collapse-container {
       margin-bottom: 20px;
+      width: 100%;
      
   
       &:not(:last-child) {
         margin-bottom: -40px;
             }
     }
+    .collapse-wrapper{
+      width: 100%;
    
     .collapse-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
       
-      padding: 12px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -394,6 +631,8 @@
       cursor: pointer;
       margin-top: 58px;
       width: 335px;
+      width: 100%;
+      //width: 613%;
       height: 29.93px;
       border-radius: 5px;
       position: unset;
@@ -412,6 +651,7 @@
       .collapse-icon {
         transition: transform 0.3s ease-in-out;
         width: 60px;
+        width: 18%;
         height: 26px;
         color: #FFFFFF;
         position: absolute;
@@ -443,6 +683,8 @@
       //width: 316.58px;
       height: 143.32px;
       width: 335px;
+      width: 100%;
+     // width: 613%;
       background: #F7F7F7;
       border-radius: 5px;
       position: unset;
@@ -466,10 +708,228 @@
           color: #FF6060;
         }
       }
-    }
-    }
+    }}
+  }
+  @media screen and (min-width: 376px) and (max-width:425px){
+        flex-direction: column;
+        position: absolute;
+        width: 100%; 
+        top: -180px;
+       
+        .collapse-container {
+          margin-bottom: 20px;
+          width: 100%;
+        
+      
+          &:not(:last-child) {
+            margin-bottom: -40px;
+                }
+        }
+        .collapse-wrapper{
+          width: 100%;
+        
+      .collapse-header {
+        
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 16px;
+        background: #FF6060;
+        border-radius: 10px;
+        cursor: pointer;
+        margin-top: 58px;
+        width: 376px;
+        width: 100%;
+        //width: 250%;
+      
+        height: 29.93px;
+        border-radius: 5px;
+        position: unset;
+    
+    
+        h3 {
+          margin: 0;
+          @include  policeStyle1();
+          font-size: 13px;
+        
+          display: flex;
+          align-items: center;
+    
+          color: #FFFFFF;
+        }
+        .collapse-icon {
+          transition: transform 0.3s ease-in-out;
+          width: 55px;
+          width: 18%;
+          height: 26px;
+          color: #FFFFFF;
+          position: absolute;
+          left: 87%;
+
+    
+          &.open {
+            transform: rotate(180deg);
+          }
+        }
+      }
+    
+      
+    
+      .collapse-content-closed {
+        height: 0;
+        overflow: hidden;
+        //transition: height 0.3s ease-in-out;
+        
+        color: #FF6060;
+        font-size: 12px;
+      }
+    
+      .collapse-content {
+        overflow: hidden;
+        transition: height 0.3s ease-in-out;
+        
+        padding: 12px;
+        //width: 316.58px;
+        height: 143.32px;
+        width:376px;
+        width: 100%;
+        //width: 250%;
+      
+        background: #F7F7F7;
+        border-radius: 5px;
+        position: unset;
+    
+        p {
+          margin: 0;
+          @include  policeStyle1();
+          font-weight: 400;
+          font-size: 12px;
+          color: #FF6060;
+          margin-top: 6px;
+
+        }
+    
+        ul {
+          margin-top: 6px;
+          li {
+            @include  policeStyle1();
+            font-weight: 400;
+            font-size: 12px;
+            color: #FF6060;
+          }
+        }
+      }}
+  }
+  @media screen and (min-width: 426px) and (max-width:768px){
+    flex-direction: column;
+    position: absolute;
+    
+    width: 46%;
+    width: 100%;
+    top: 73px;
+    
+    .collapse-container {
+      margin-bottom: 20px;
+      width: 100%;
+    
   
+      &:not(:last-child) {
+        margin-bottom: -35px;
+            }
+    }
+    .collapse-wrapper{
+      width: 100%;
+    
+  .collapse-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px;
+    background: #FF6060;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 58px;
+    width: 566px;
+    width: 100%;
+   // width: 611%;
+    height: 29.93px;
+    border-radius: 5px;
+    position: unset;
+
+
+    h3 {
+      margin: 0;
+      @include  policeStyle1();
+      font-size: 13px;
+    
+      display: flex;
+      align-items: center;
+
+      color: #FFFFFF;
+    }
+    .collapse-icon {
+      transition: transform 0.3s ease-in-out;
+      width: 55px;
+      width: 25%;
+      height: 26px;
+      color: #FFFFFF;
+      position: absolute;
+      left: 84%;
+
+
+      &.open {
+        transform: rotate(180deg);
+      }
+    }
+  }
+
   
+
+  .collapse-content-closed {
+    height: 0;
+    overflow: hidden;
+    //transition: height 0.3s ease-in-out;
+    
+    color: #FF6060;
+    font-size: 12px;
+  }
+
+  .collapse-content {
+    overflow: hidden;
+    transition: height 0.3s ease-in-out;
+    
+    padding: 12px;
+    //width: 316.58px;
+    height: 143.32px;
+    width:566px;
+    width: 100%;
+    //width: 611%;
+  
+    background: #F7F7F7;
+    border-radius: 5px;
+    position: unset;
+
+    p {
+      margin: 0;
+      @include  policeStyle1();
+      font-weight: 400;
+      font-size: 12px;
+      color: #FF6060;
+      margin-top: 6px;
+
+    }
+
+    ul {
+      margin-top: 6px;
+      li {
+        @include  policeStyle1();
+        font-weight: 400;
+        font-size: 12px;
+        color: #FF6060;
+      }
+    }
+  }}
+}
   
   
 }
