--- a/src/styles/_error.scss
+++ b/src/styles/_error.scss
@@ -59,10 +59,214 @@
           color: #FF6060;
      }
 }
+@media screen and (min-width: 769px) and (max-width:1024px){
+     .kasa-error{
+          position: relative;
+          width: 100%;
+     
+        
+     
+          background: #FFFFFF;
+          .error{
+               position: absolute;
+               left: 35%;
+               right: 0%;
+               top: -30%;
+               bottom: 0%;
+
+               @include  policeStyle1();
+               font-weight: 700;
+               font-size: 122px;
+              
+               display: flex;
+               align-items: center;
+               text-align: center;
+
+               color: #FF6060;
+          
+          }
+         h2{
+          display: none;
+         }
+          h3{
+               position: absolute;
+               left: 31.27%;
+               right: 20.8%;
+               top: 52.6%;
+               bottom: 49.94%;
+
+               @include  policeStyle1();
+               font-size: 22px;
+              
+
+               display: flex;
+               align-items: flex-end;
+               text-align: center;
+
+               color: #FF6060;
+
+               }
+
+               
+          p{
+               position: absolute;
+               left: 35%;
+               right: 20.8%;
+               top: 68.6%;
+               bottom: 28.94%;
+
+               @include  policeStyle1();
+               font-size: 18px;
+              
+               display: flex;
+               align-items: flex-end;
+               text-decoration-line: underline;
+
+               color: #FF6060;
+
+          }
+     }
+}     
+@media screen and (min-width: 426px) and (max-width:768px){
+     .kasa-error{
+          position: relative;
+          width: 100%;
+     
+        
+     
+          background: #FFFFFF;
+          .error{
+               position: absolute;
+               left: 35%;
+               right: 0%;
+               top: -30%;
+               bottom: 0%;
+
+               @include  policeStyle1();
+               font-weight: 700;
+               font-size: 122px;
+              
+               display: flex;
+               align-items: center;
+               text-align: center;
+
+               color: #FF6060;
+          
+          }
+         h2{
+          display: none;
+         }
+          h3{
+               position: absolute;
+               left: 31.27%;
+               right: 20.8%;
+               top: 52.6%;
+               bottom: 49.94%;
+
+               @include  policeStyle1();
+               font-size: 22px;
+              
+
+               display: flex;
+               align-items: flex-end;
+               text-align: center;
+
+               color: #FF6060;
+
+               }
+
+               
+          p{
+               position: absolute;
+               left: 35%;
+               right: 20.8%;
+               top: 68.6%;
+               bottom: 28.94%;
+
+               @include  policeStyle1();
+               font-size: 18px;
+              
+               display: flex;
+               align-items: flex-end;
+               text-decoration-line: underline;
+
+               color: #FF6060;
+
+          }
+     }
+}     
+@media screen and (min-width: 376px) and (max-width:425px){
+     .kasa-error{
+          position: relative;
+          width: 100%;
+     
+        
+     
+          background: #FFFFFF;
+          .error{
+               position: absolute;
+               left: 29%;
+               right: 0%;
+               top: -30%;
+               bottom: 0%;
+
+               @include  policeStyle1();
+               font-weight: 700;
+               font-size: 96px;
+              
+               display: flex;
+               align-items: center;
+               text-align: center;
+
+               color: #FF6060;
+          
+          }
+         h2{
+          display: none;
+         }
+          h3{
+               position: absolute;
+               left: 23.27%;
+               right: 20.8%;
+               top: 49.6%;
+               bottom: 49.94%;
+
+               @include  policeStyle1();
+               font-size: 18px;
+              
+
+               display: flex;
+               align-items: flex-end;
+               text-align: center;
+
+               color: #FF6060;
+
+               }
+
+               
+          p{
+               position: absolute;
+               left: 27.27%;
+               right: 20.8%;
+               top: 68.6%;
+               bottom: 28.94%;
+
+               @include  policeStyle1();
+               font-size: 14px;
+              
+               display: flex;
+               align-items: flex-end;
+               text-decoration-line: underline;
+
+               color: #FF6060;
+
+          }
+     }
+}
 @media screen and (max-width: 375px){
      .kasa-error{
           position: relative;
-          width: 375px;
+          width: 100%;
         
      
           background: #FFFFFF;
