--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,21 +1,10 @@
 .kasa-footer{
     
      position: relative;
-     //position: fixed;
-     //bottom: 0;
      width: 1440px;
      height: 209px;
      background: #000000;
-     //bottom: 0;
-     //top: 4333px;
-     // page accueil 
-     //top: 2269px;
-     // page apropos collapses fermes et collapses ouverts
 
-     //top:150px;
-
-
-     
      
      .kasa-footer_elements{
           
@@ -63,13 +52,135 @@
      }
      
 }
+@media screen and (min-width: 769px) and (max-width:1024px){
+     .kasa-footer{
+    
+          position: relative;
+          width: 1440px;
+          width: 100%;
+          height: 209px;
+          background: #000000;
+     
+          
+          .kasa-footer_elements{
+               
+               img{
+                    position: absolute;
+                    left: 45.76%;
+                    right: 45.76%;
+                    top: 31.58%;
+                    bottom: 49.55%;  
+                    //align-items: center;
+               }
+               p{
+                    position: absolute;
+                    left: 32.15%;
+                    right: 32.22%;
+                    top: 64.11%;
+                    bottom: 13.88%;
+     
+                    @include  policeStyle1();
+                    font-size: 24px;
+                    
+     
+                    display: flex;
+                    align-items:center;
+                    text-align: center;
+                    padding-left: 7%;
+                    color: #FFFFFF;
+               }
+         }
+         
+     }
+}
+@media screen and (min-width: 426px) and (max-width:768px){
+     .kasa-footer{
+          position: relative;
+          height: 209px;
+          width: 100%;
+          //top: 2800px;
+   
+          background: #000000;
+         
+         .kasa-footer_elements{
+               
+               img{
+                    position: absolute;
+                    left: 33.87%;
+                    right: 33.6%;
+                    top: 29.67%;
+                    bottom: 51.46%;
+               }
+               p{
+                    position: absolute;
+                    left:  22%;
+                    right: -18.4%;
+                    top: 48.33%;
+                    bottom: 29.67%;
+                    @include  policeStyle1();
+                    
+                    font-size: 12px;
+                   
+                    width: 74%;
+                    display: flex;
+                    align-items: flex-end;
+                    text-align: center;
 
+                    color: #FFFFFF;
+
+               }
+         }
+         
+     }     
+} 
+    
+@media screen and (min-width: 376px) and (max-width:425px){
+     .kasa-footer{
+          position: relative;
+          height: 209px;
+          width: 100%;
+          //top: 2800px;
+   
+          background: #000000;
+         
+         .kasa-footer_elements{
+               
+               img{
+                    position: absolute;
+                    left: 33.87%;
+                    right: 33.6%;
+                    top: 29.67%;
+                    bottom: 51.46%;
+               }
+               p{
+                    position: absolute;
+                    left:  22%;
+                    right: -18.4%;
+                    top: 48.33%;
+                    bottom: 29.67%;
+                    @include  policeStyle1();
+                    
+                    font-size: 12px;
+                   
+                    width: 74%;
+                    display: flex;
+                    align-items: flex-end;
+                    text-align: center;
+
+                    color: #FFFFFF;
+
+               }
+         }
+         
+     }     
+}
 //styles CSS pour les écrans de 375 pixels ou moins 
 @media screen and (max-width: 375px){
      .kasa-footer{
           position: relative;
           height: 209px;
           width: 375px;
+          width: 100%;
           //top: 2800px;
    
           background: #000000;
