--- a/src/styles/_hostrate.scss
+++ b/src/styles/_hostrate.scss
@@ -77,9 +77,9 @@
           .HostRate-host-name {
                position: absolute;
              
-               width: 62px;
+               width: 56px;
                height: 33px;
-               left: 230px;
+               left: 72%;
                top: 348px;
           
                @include  policeStyle1();
@@ -97,7 +97,8 @@
                width: 32px;
                height: 32px;
                //left: 1273px;
-               left: 300px;
+               //left: 300px;
+               left: 90%;
                //top: 567px;
                top: 349px;
               
@@ -113,3 +114,184 @@
      
 
 }
+@media screen and (min-width: 376px) and (max-width:425px){
+     .HostRate-rate{
+          position: absolute;
+          width: 180px;
+          height: 18px;
+          left: 0%;
+          top: 352px;
+          //z-index: auto;
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 15px;
+               height: 15px;
+               left: 1144px;
+               top: 652px;
+     }
+     .HostRate-host{
+          
+          .HostRate-host-name {
+               position: absolute;
+             
+               width: 62px;
+               height: 33px;
+               left: 73%;
+               top: 348px;
+          
+               @include  policeStyle1();
+               font-size: 12px;
+             
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 32px;
+               height: 32px;
+               //left: 1273px;
+               left: 91%;
+               //top: 567px;
+               top: 349px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+}
+
+@media screen and (min-width: 426px) and (max-width:550px){
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 0%;
+          //top: 652px;
+          top: 375px;
+        
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 30px;
+               height: 30px;
+               left: 1144px;
+               top: 652px;
+     }
+     .HostRate-host{
+          position: absolute;
+          width: 135.5px;
+          width: 24%;
+          height: 33px;
+          left: 76%;
+          
+    
+  
+          .HostRate-host-name {
+               position: absolute;
+               width: 61px;
+               height: 52px;
+               left: -56%;
+               top: 364px;
+                         
+               @include  policeStyle1();
+               font-size: 14px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 42px;
+               height: 42px;
+               left: 289px;
+               left: 41%;
+               top: 374px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+}
+@media screen and (min-width: 551px) and (max-width:768px){
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 0%;
+          //top: 652px;
+          top: 375px;
+        
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 30px;
+               height: 30px;
+               left: 1144px;
+               top: 652px;
+     }
+     .HostRate-host{
+          position: absolute;
+          width: 135.5px;
+          width: 24%;
+          height: 33px;
+          left: 76%;
+          
+    
+  
+          .HostRate-host-name {
+               position: absolute;
+               width: 61px;
+               height: 52px;
+               left: -9%;
+               top: 364px;
+                         
+               @include  policeStyle1();
+               font-size: 14px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 42px;
+               height: 42px;
+               left: 289px;
+               left: 44%;
+               top: 374px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+}
+
