--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -43,7 +43,7 @@
      }
      
  }
- @media screen and  (min-width: 2001px){
+@media screen and  (min-width: 2001px){
      .kasa-logement { 
           .kasa-logement_body{
           left: 15%;
@@ -51,25 +51,67 @@
      }
      
  } 
- @media screen and  (min-width: 2560px){
+@media screen and  (min-width: 2560px){
      .kasa-logement { 
           .kasa-logement_body{
           left: 23%;
           }
      }
      
- } 
-@media screen and (max-width: 375px){
-     .kasa-page{
-          height: 900px
-     }
-     .kasa-logement{
-          @include pageLengthmobile();
+ }
+ 
+@media screen and (min-width: 426px) and (max-width:768px){
+     .kasa-logement {
+          @include pageLengthdesktop();
           .kasa-logement_body{
                position: absolute;
-               width: 335px;
+               width: 74%;
+               height: 643px;
+               //left: 100px;
+               left: 12%;
+               top: 95px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 0%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               //width: 1240px;
+              width: 100%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 0px;
+               top: 329px;
+     
+          }
+     }
+}
+      
+@media screen and (min-width: 376px) and (max-width:425px){
+     .kasa-page{
+          height: 900px;
+     }
+     .kasa-logement{
+          @include pageLengthmobileL();
+          .kasa-logement_body{
+               position: absolute;
+               width: 89%;
                height: 515.93px;
-               left: 20px;
+               //left: 20px;
+               left: 5%;
                top: 94px;
      
           }
@@ -90,6 +132,50 @@
           .kasa-logement-body_content{
                position: absolute;
                width: 335px;
+               width: 100%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 0px;
+               top: 532px;
+     
+          }
+     }
+}
+@media screen and (max-width: 375px){
+     .kasa-page{
+          height: 900px;
+     }
+     .kasa-logement{
+          @include pageLengthmobile();
+          width: 100%;
+          .kasa-logement_body{
+               position: absolute;
+               width: 90%;
+               height: 515.93px;
+               //left: 20px;
+               left: 5%;
+               top: 94px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 0%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               width: 335px;
+               width: 100%;
                height: 101px;
                //left: 100px;
                //top: 670px;
