--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -14,6 +14,11 @@
      width: 375px;
     
 }
+@mixin pageLengthmobileL{
+     position: relative;
+     width: 100%;
+    
+}
 
 // mixin composant collapse
 
