--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -69,8 +69,146 @@
      }
     
 }
+@media screen and (min-width: 426px) and (max-width:768px){
+     .kasa-home-thumb{
+          //height: 829px;
+          height: 780px;
+          width: 1240px;
+          width: 100%;
+          left: 100px;
+          left: 11%;
+          //top: 437px;
+          top: auto;
+          
+          border-radius: 0px;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          align-items: center;
+          row-gap: 60px;
+          gap: 32px;
+          padding: 20px;
+         // height: 50px;   
+          border-radius: 25px;
+          padding-top:46px ;
+          padding-left: 8%;
+          //overflow: scroll;
+          
+          
+          .rectangle2{ 
+     
+               height: 244px;
+               width: 244px;
+               left: 0px;
+               top: 0px;
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               border-radius: 10px;
+              // width: 100%;
+               text-align:left; 
+              
+               
+               h2{
+                
+     
+                    height: 52px;
+                    width: 300px;
+                    width: 230px;
+                    //left: 20px;
+                    //top: 268px;
+                    @include  policeStyle1();
+                    font-size: 18px;
+                 
+                    //margin-top: 60px;
+                    margin-top: -62px;
+                    margin-left: 20px;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+                    display: flex;
+                    align-items: flex-end;
+                   
+     
+                    color: #FFFFFF;
+     
+               }
+               img{
+                   
+                    border-radius: 10px;
+                    width: 100%;
+                    height: 100%;
+                    
+                   
+                 
+     
+               }     
+          }
+         
+     }
+}
+@media screen and (min-width: 376px) and (max-width:425px){
+     .kasa-home-thumb{
+    
+          position: absolute;
+          width: 335px;
+          height: 255px;
+          left: -21px;
+          //top: 0px;
+          //top: 680px;
+          gap: 24px;
+          padding: 20px;
+          border-radius: 10px;
+          align-items: center;
+         
+          .rectangle2{ 
+      
+            width: 376px;
+            height: 255px;
+               left: 0px;
+               top: 0px;
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               border-radius: 10px;
+              // width: 100%;
+               text-align:left; 
+              
+               
+               h2{
+                
+      
+                    height: 52px;
+                    width: 300px;
+                    //left: 20px;
+                    //top: 268px;
+                    @include  policeStyle1();
+                    font-size: 18px;
+                    
+                    //margin-top: 60px;
+                    margin-top: -62px;
+                    margin-left: 20px;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+                   
+      
+                    color: #FFFFFF;
+      
+               }
+               img{
+                   
+                    border-radius: 10px;
+                    width: 100%;
+                    height: 100%;
+                    
+                   
+                 
+      
+               }    
+               
+          }
+          
+         
+      }
 
-
+}     
 
 @media screen and (max-width: 375px){
   .kasa-home-thumb{
