--- a/src/styles/_apropos.scss
+++ b/src/styles/_apropos.scss
@@ -61,6 +61,45 @@
           }
      }
 }
+@media screen and (min-width: 769px) and (max-width:1024px){ 
+     .kasa-apropos{
+          @include pageLengthdesktop();
+          margin-bottom: 300px;
+          
+          .kasa-apropos_section1{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 223px;
+               left: 100px;
+               left: 6%;
+               top: 126px;
+               background-size: cover;
+               overflow: hidden;
+               background: #1e1c1c3d;
+               mix-blend-mode: darken;
+               border-radius: 25px;
+        
+               .sectionimagekalen{
+                    position: absolute;
+                    width: 1240px;
+                    //width: 100%;
+                    height: 827px;
+                    //left: 100px;
+                    //top: -150px;
+                    width: 100%;
+                    mix-blend-mode: darken;
+                    border-radius: 25px;
+                    transform: translate(1px, -310px);
+               }
+               .sectionimagegustavo{
+                    display: none;
+               }
+          }
+          
+             
+     }
+}     
 @media screen and (min-width: 426px) and (max-width:768px){
      .kasa-apropos{
           @include pageLengthmobile();
@@ -70,10 +109,10 @@
           .kasa-apropos_section1{
                position: absolute;
                width: 336px;
-               width: 75%;
+               width: 90%;
                height: 223px;
-               left: 11%;
-               top: 98px;
+               left: 6%;
+               top: 104px;
 
                background-size: cover;
                overflow: hidden;
