--- a/src/styles/_collapse.scss
+++ b/src/styles/_collapse.scss
@@ -115,12 +115,134 @@
     //top:776px;
     top: 454px;
   }
-
+  @media screen and (min-width: 769px) and (max-width:1024px){ 
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 1023px;
+    width: 82%;
+    height: 47px;
+    left: 208px;
+    left: 10%;
+    top: 380px;
+  
+  
+   .collapse-container {
+      margin-bottom: 20px;
+     
+  
+      &:not(:last-child) {
+        margin-bottom: 40px;
+      }
+    }
+  
+    .collapse-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: #FF6060;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 1023px;
+      width: 920px;
+      width: 100%;
+      height: 47px;
+  
+      h3 {
+        margin: 0;
+        @include  policeStyle1();
+        font-size: 24px;
+       
+        
+        display: flex;
+        align-items: center;
+        color: #FFFFFF; 
+      }
+  
+      & .collapse-icon {
+        transition: transform 0.3s ease-in-out;
+        color: #FFFFFF;
+        display: inline-block;
+        position: absolute;         
+        left: 93.75%;
+        right: 18.63%;
+        width: 66px;
+        height: 36px;
+  
+        &.open {
+          transform: rotate(180deg);
+        }
+      }
+    }
+  
+    .collapse-content-closed {
+      height: 0;
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+    }
+  
+    .collapse-content {
+      overflow: hidden;
+      transition: height 0.3s ease-in-out;
+      padding: 20px;
+      background: #F7F7F7;
+      border-radius: 5px;
+      width: 1023px;
+      width: 920px;
+      width: 100%;
+      //width: 71%;
+       & p{
+          margin: 0;
+          @include  policeStyle1();
+          font-weight: 400;
+          font-size: 24px;
+          color: #FF6060;
+        }
+      
+    }
+  
+    .collapse-0 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      top:406px;
+    }
+  
+    .collapse-1 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:484px;
+      top: 422px;
+    }
+  
+    .collapse-2 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:699px;
+      top: 439px;
+    }
+  
+    .collapse-3 {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      position: relative;
+      //top:776px;
+      top: 454px;
+    }
+    
+  }  
   @media screen and (min-width: 426px) and (max-width:768px){
     @include collapse-aproposM();
-    width: 75%;
-    left: 11%;
-    top: 340px;
+    width: 90%;
+    left: 6%;
+    top: 362px;
  
     .collapse-container {
       margin-bottom: 20px;
@@ -157,7 +279,7 @@
       & .collapse-icon {
         display: inline-block;
         position: absolute;         
-        left: 83.75%;
+        left: 90%;
         right: 18.63%;
         width: 66px;
         height: 30px;
@@ -181,6 +303,7 @@
       transition: height 0.3s ease-in-out;
       padding: 20px;
       Width:335px;
+      width: 100%;
       background: #F7F7F7;
       border-radius: 5px;
      //width: 71%;
@@ -300,6 +423,7 @@
       transition: height 0.3s ease-in-out;
       padding: 20px;
       Width:335px;
+      width: 100%;
       background: #F7F7F7;
       border-radius: 5px;
      //width: 71%;
@@ -933,6 +1057,113 @@
   
   
 }
+@media screen and (min-width: 769px) and (max-width:1024px){ 
+  .logement-collapse {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    /*******/
+  
+    .collapse-container {
+      width: calc(50% - 38px);
+      margin-bottom: 20px;
+    }
+   
+     
+    .collapse-header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 10px 20px;
+          
+          padding: 16px;
+          background: #FF6060;
+          border-radius: 10px;
+          cursor: pointer;
+          margin-top: 58px;
+          width: 582px;
+          width: 420px;
+          height: 52px;
+          position: absolute;
+          z-index: 1;
+  
+        h3 {
+          margin: 0;
+          font-size: 18px;
+          @include  policeStyle1();
+          font-size: 18px;
+       
+          display: flex;
+          align-items: center;
+     
+          color: #FFFFFF;
+        }
+  
+          .collapse-icon {
+            transition: transform 0.3s ease-in-out;
+            width: 38px;
+            height: 35px;
+            color: #FFFFFF;
+            position: absolute;
+            left: 91%;
+      
+            &.open {
+              transform: rotate(180deg);
+            }
+          }
+    }
+  
+        
+  
+    .collapse-content-closed {
+          height: 0;
+          overflow: hidden;
+         // transition: height 0.3s ease-in-out;
+          color: #FF6060;
+          font-size: 18px;
+          
+    }
+  
+    .collapse-content {
+          overflow: hidden;
+          transition: height 0.3s ease-in-out;
+          
+          padding: 16px;
+          background: #F7F7F7;
+          line-height: 142.6%;
+          border-radius: 10px;
+          Width:582px;
+          width: 420px;
+          Height:249px;
+          top: 95px;
+          position: absolute;
+          
+    
+          p {
+            margin: 0;
+            @include  policeStyle1();
+            font-weight: 400;
+            color: #FF6060;
+            margin-top: 18px;
+            
+          }
+    
+          ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            line-height: 142.6%;
+            margin-top: 18px;
+            li {
+              margin-bottom: 8px;
+              @include  policeStyle1();
+              font-weight: 400;
+              font-size: 18px;
+              color: #FF6060;
+            }
+          }
+    }  
+}}
 
 
 
