--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -180,6 +180,7 @@
         //width: 86%;
         height: 68px;
         left: 100px;
+        left: 6%;
         top: 40px;
         
        .kasa-header-logo{
@@ -240,14 +241,14 @@
             }
         }
     }
-  }  
-  @media screen and (min-width: 426px) and (max-width:768px){
+  } 
+  @media screen and (min-width: 716px) and (max-width:768px){
     .kasa-header {
         position: absolute;
-        width:73%;
+        width:90%;
         height: 47px;
         left: 20px;
-        left: 11%;
+        left: 6%;
         top: 20px;
  
         .kasa-header-logo{
@@ -278,7 +279,7 @@
             bottom: 25.53%;
             height: 17px;
             width: 140px;
-            width: 46%;
+            width: 44%;
             //width: 25%;
             //left: 195px;
             //top: 18px;        
@@ -325,6 +326,91 @@
         }
     }
   }
+  @media screen and (min-width: 426px) and (max-width:715px){
+    .kasa-header {
+        position: absolute;
+        width:96%;
+        height: 47px;
+        left: 20px;
+        top: 20px;
+        width: 88%;
+        height: 47px;
+        left: 6%;
+ 
+        .kasa-header-logo{
+            opacity: 0;
+        }
+               
+        .kasa-header-logomobile{
+            opacity: 1;
+            height: 47px;
+            width: 145px;
+        
+            position: absolute;
+            left: 0%;
+            right: 56.72%;
+            top: 0%;
+            bottom: 0%;
+            z-index: 1;
+        }
+        
+        .kasa-header-nav nav{          
+            position: absolute;
+            left: 58.21%;
+            //left: 137.21%;
+            right: 0%;
+            //top: 38.3%;
+            top: 52%;
+            bottom: 25.53%;
+            height: 17px;
+            width: 140px;
+            width: 44%;
+            //left: 195px;
+            //top: 18px;        
+           
+            .Accueil{
+                position: absolute;
+                //left: 58.21%;
+                left: 30%;
+                //right: 24.18%;
+                top: 38.3%;
+                bottom: 25.53%;
+ 
+                @include  policeStyle1();
+                font-size: 12px;
+                
+ 
+                display: flex;
+                align-items: flex-end;
+                text-align: right;
+                text-decoration-line: underline;
+ 
+                color: #FF6060;
+ 
+            }
+            .Apropos{
+                position: absolute;
+                //left: 78.81%;
+                right: 0%;
+                top: 38.3%;
+                bottom: 25.53%;
+                
+                @include  policeStyle1();
+                font-size: 12px;
+            
+                display: flex;
+                align-items: flex-end;
+                text-align: right;
+                
+                color: #FF6060;
+                
+    
+    
+            }
+        }
+    }
+  }   
+ 
      
   @media screen and (min-width: 376px) and (max-width:425px){
     .kasa-header {
@@ -334,8 +420,8 @@
        left: 20px;
        top: 20px;
        width: 88%;
-    height: 47px;
-    left: 6%;
+       height: 47px;
+       left: 6%;
 
        .kasa-header-logo{
            opacity: 0;
