--- a/src/styles/_hostrate.scss
+++ b/src/styles/_hostrate.scss
@@ -233,6 +233,7 @@
      }
 }
 @media screen and (min-width: 551px) and (max-width:768px){
+     
      .HostRate-rate{
           position: absolute;
           width: 196px;
@@ -251,14 +252,13 @@
                top: 652px;
      }
      .HostRate-host{
+         
           position: absolute;
           width: 135.5px;
-          width: 24%;
+          width: 19%;
           height: 33px;
-          left: 76%;
-          
-    
-  
+          left: 84%;
+   
           .HostRate-host-name {
                position: absolute;
                width: 61px;
@@ -293,5 +293,69 @@
                
           }
      }
+     
+}
+@media screen and (min-width: 769px) and (max-width:1024px){ 
+     .HostRate-rate{
+          position: absolute;
+          width: 196px;
+          height: 36px;
+          //left: 1144px;
+          left: 1053px;
+          left: 80%;
+          //top: 652px;
+          top: 518px;
+        
+     
+     }
+     .HostRate-rate-etoile img{
+               width: 36px;
+               height: 36px;
+               left: 1144px;
+               left: 80%;
+               top: 652px;
+     }
+     .HostRate-host{
+         
+          .HostRate-host-name {
+               position: absolute;
+               width: 93px;
+               height: 52px;
+               //left: 1170px;
+               left: 1066px;
+               left: 82%;
+               //top: 573px;
+               top: 442px;
+          
+               @include  policeStyle1();
+               font-size: 18px;
+           
+               display: flex;
+               align-items: flex-end;
+               text-align: right;
+          
+               color: #FF6060;
+          
+          }
+          .HostRate-host-picture{
+               position: absolute;
+               width: 64px;
+               height: 64px;
+               //left: 1273px;
+               left: 1166px;
+               left: 93%;
+               //top: 567px;
+               top: 440px;
+              
+               //background: #C4C4C4;
+               img {
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+               }
+               
+          }
+     }
+     
 }
 
