--- a/src/styles/_logement.scss
+++ b/src/styles/_logement.scss
@@ -59,17 +59,56 @@
      }
      
  }
- 
+@media screen and (min-width: 769px) and (max-width:1024px){ 
+     .kasa-logement {
+          @include pageLengthdesktop();
+          .kasa-logement_body{
+               position: absolute;
+               width: 1240px;
+               width: 90%;
+               height: 643px;
+               left: 100px;
+               left: 6%;
+               top: 128px;
+     
+          }
+          
+          .kasa-logement-body_carousel{
+               position: absolute;
+               left: 0%;
+               right: 0%;
+               top: 0%;
+               bottom: 0%;
+     
+               //background: url(accomodation-1-3.jpg);
+               mix-blend-mode: normal;
+               border-radius: 25px;
+          
+          }
+         
+          .kasa-logement-body_content{
+               position: absolute;
+               width: 1240px;
+               width: 100%;
+               height: 101px;
+               //left: 100px;
+               //top: 670px;
+               left: 0px;
+               top: 532px;
+     
+          }
+     } 
+}     
 @media screen and (min-width: 426px) and (max-width:768px){
      .kasa-logement {
           @include pageLengthdesktop();
           .kasa-logement_body{
                position: absolute;
-               width: 74%;
+               width: 90%;
                height: 643px;
                //left: 100px;
-               left: 12%;
-               top: 95px;
+               left: 6%;
+               top: 108px;
      
           }
           
