--- a/src/styles/_thumb.scss
+++ b/src/styles/_thumb.scss
@@ -69,7 +69,83 @@
      }
     
 }
-@media screen and (min-width: 426px) and (max-width:768px){
+@media screen and (min-width: 769px) and (max-width:1024px){
+     .kasa-home-thumb{
+          //height: 829px;
+          height: 780px;
+          width: 1240px;
+          width: 100%;
+          left: 100px;
+          left: 6%;
+          //top: 437px;
+          top: auto;
+          
+          border-radius: 0px;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          align-items: center;
+          row-gap: 60px;
+          gap: 60px;
+          padding: 20px;
+         // height: 50px;   
+          border-radius: 25px;
+          padding-top:56px ;
+          padding-left: 50px;
+          //overflow: scroll;
+          
+          
+          .rectangle2{ 
+     
+               height: 340px;
+               width: 340px;
+               left: 0px;
+               top: 0px;
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               border-radius: 10px;
+              // width: 100%;
+               text-align:left; 
+               margin-left: 10%;
+              
+               
+               h2{
+                
+     
+                    height: 52px;
+                    width: 300px;
+                    //left: 20px;
+                    //top: 268px;
+                    @include  policeStyle1();
+                    font-size: 18px;
+                 
+                    //margin-top: 60px;
+                    margin-top: -62px;
+                    margin-left: 20px;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+                    display: flex;
+                    align-items: flex-end;
+                   
+     
+                    color: #FFFFFF;
+     
+               }
+               img{
+                   
+                    border-radius: 10px;
+                    width: 100%;
+                    height: 100%;
+                    
+                   
+                 
+     
+               }     
+          }
+         
+     }
+}     
+@media screen and (min-width: 716px) and (max-width:768px){
      .kasa-home-thumb{
           //height: 829px;
           height: 780px;
@@ -106,6 +182,7 @@
                border-radius: 10px;
               // width: 100%;
                text-align:left; 
+               margin-left: 7%;
               
                
                h2{
@@ -145,11 +222,12 @@
          
      }
 }
-@media screen and (min-width: 376px) and (max-width:425px){
+@media screen and (min-width: 426px) and (max-width:715px){
      .kasa-home-thumb{
     
           position: absolute;
           width: 335px;
+          width: 100%;
           height: 255px;
           left: -21px;
           //top: 0px;
@@ -207,6 +285,72 @@
           
          
       }
+}     
+@media screen and (min-width: 376px) and (max-width:425px){
+     .kasa-home-thumb{
+    
+          //position: absolute;
+          width: 335px;
+          width: 100%;
+          height: 255px;
+          left: -21px;
+          //top: 0px;
+          //top: 680px;
+          gap: 24px;
+          //padding: 20px;
+          border-radius: 10px;
+          align-items: center;
+          padding: 0%;
+         
+          .rectangle2{ 
+      
+            width: 376px;
+            width: 100%;
+            height: 255px;
+               left: 0px;
+               top: 0px;
+               border-radius: 10px;
+               background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+               border-radius: 10px;
+              // width: 100%;
+               text-align:left; 
+              
+               
+               h2{
+                
+      
+                    height: 52px;
+                    width: 300px;
+                    //left: 20px;
+                    //top: 268px;
+                    @include  policeStyle1();
+                    font-size: 18px;
+                    
+                    //margin-top: 60px;
+                    margin-top: -62px;
+                    margin-left: 20px;
+                    margin-bottom: 20px;
+                    margin-right: 20px;
+                   
+      
+                    color: #FFFFFF;
+      
+               }
+               img{
+                   
+                    border-radius: 10px;
+                    width: 100%;
+                    height: 100%;
+                    
+                   
+                 
+      
+               }    
+               
+          }
+          
+         
+      }
 
 }     
 
@@ -215,6 +359,7 @@
     
     position: absolute;
     width: 335px;
+    //width: 100%;
     height: 255px;
     left: -21px;
     //top: 0px;
@@ -227,6 +372,7 @@
     .rectangle2{ 
 
       width: 335px;
+      //width: 100%;
       height: 255px;
          left: 0px;
          top: 0px;
